data/derived/comb/progs/unify/prog3211.ml.out
Characters 95-97:
  (t1, (mulByDigit h1 rh::rt)::rt)
                               ^^
Error: This expression has type int list list
       but an expression was expected of type int list list list
       Type int list is not compatible with type int list list 
